@@ -3,12 +3,15 @@
 /******************************************************************************/
 
 #include <iostream>
+#include <fstream>
+#include <ostream>
 #include <iomanip>
 #include <complex>
 
 using namespace std;
 
 #include "dece.h"
+#include "global.h"
 #include "gfr.h"
 #include "terminate.h"
 #include "groupstructure.h"
@@ -19,11 +22,15 @@ static int mfr[ncx] = {3, 3, 3,  3,  3,  3,  3,  3,   3,   3,   3,   3,   3,   3
 static int mtr[ncx] = {1, 2, 4, 16, 17, 18, 22, 28, 102, 103, 104, 105, 106, 107, 452};
 
 static void DeceGroupAverage (ENDF *, const int, const int, double *, double *);
+static int DecePrescanGroup (string);
+static int DeceReadGroup (double *, string);
+
 
 /**********************************************************/
 /*      Generate Group Cross Section                      */
 /*      --------                                          */
 /*      The group structures are:                         */
+/*         -1: arbitrary structure given by external file */
 /*          0: SAND-IIa 640 group                         */
 /*          1: LANL 70 group                              */
 /*          2: VITAMINE-J 175 group                       */
@@ -32,20 +39,29 @@ static void DeceGroupAverage (ENDF *, const int, const int, double *, double *);
 /*          0: constant                                   */
 /*          1: 1/E                                        */
 /**********************************************************/
-void DeceGenerateGroup(ENDFDict *dict, ENDF *lib[], const int group, const int weight)
+void DeceGenerateGroup(ENDFDict *dict, ENDF *lib[], const int group, const int weight, string grpfile)
 {
   double *xdat = NULL, **ydat;
 
   /*** determine group structure */
   int ng = 0;
-  switch(group){
-  case  0: ng = grpEnergyPoint0;  xdat = grpEnergyGrid0; break;
-  case  1: ng = grpEnergyPoint1;  xdat = grpEnergyGrid1; break;
-  case  2: ng = grpEnergyPoint2;  xdat = grpEnergyGrid2; break;
-  case  3: ng = grpEnergyPoint3;  xdat = grpEnergyGrid3; break;
-  default: break;
-  }
 
+  /*** negative group ID for external data file */
+  if(group < 0){
+    ng = DecePrescanGroup(grpfile); // number of group tentatively determined
+    xdat = new double [ng];
+    ng = DeceReadGroup(xdat,grpfile);
+  }
+  /*** built-in group structure */
+  else{
+    switch(group){
+    case  0: ng = grpEnergyPoint0;  xdat = grpEnergyGrid0; break;
+    case  1: ng = grpEnergyPoint1;  xdat = grpEnergyGrid1; break;
+    case  2: ng = grpEnergyPoint2;  xdat = grpEnergyGrid2; break;
+    case  3: ng = grpEnergyPoint3;  xdat = grpEnergyGrid3; break;
+    default: break;
+    }
+  }
   if(ng == 0){
     message << "group number " << group << " not defined";
     WarningMessage();
@@ -88,12 +104,12 @@ void DeceGenerateGroup(ENDFDict *dict, ENDF *lib[], const int group, const int w
 
   /*** print average cross section */
   for(int k=0 ; k<ng-1 ; k++){
-    cout << setw(14) << xdat[k];
-    cout << setw(14) << xdat[k+1];
+    cout << setw(14) << xdat[k]   * opt.WriteXdataConversion;
+    cout << setw(14) << xdat[k+1] * opt.WriteXdataConversion;
 
     for(int j=0 ; j<ncx ; j++){
       id = dict->getID(mfr[j],mtr[j]);
-      if(id >= 0) cout << setw(14) << ydat[j][k];
+      if(id >= 0) cout << setw(14) << ydat[j][k] * opt.WriteYdataConversion;
     }
     cout << endl;
   }
@@ -102,6 +118,8 @@ void DeceGenerateGroup(ENDFDict *dict, ENDF *lib[], const int group, const int w
     delete [] ydat[j];
   }
   delete [] ydat;
+
+  if(group < 0) delete [] xdat;
 }
 
 
@@ -150,7 +168,7 @@ static inline double integ_interval(ENDF *lib, const int n, const double e0, con
   if(w > 0.0) s = s / w * (e1 - e0); // Simpson's h/3 factor cancels
   else s = 0.0;
   
-  return s;
+ return s;
 }
 
 
@@ -163,7 +181,6 @@ void DeceGroupAverage(ENDF *lib, const int weight, const int ng, double *energy,
     sigma[i] = 0.0;
 
     double x0 = 0.0, x1 = 0.0;
-    double y0 = 0.0, y1 = 0.0;
 
     /*** boundary energies for the i-th energy group */
     double e0 = energy[i];
@@ -175,7 +192,6 @@ void DeceGroupAverage(ENDF *lib, const int weight, const int ng, double *energy,
       int j2 = j*2;
       if(lib->xdata[j2] >= e0){
         x0 = lib->xdata[j2  ];
-        y0 = lib->xdata[j2+1];
         j0 = j; break;
       }
     }
@@ -186,7 +202,6 @@ void DeceGroupAverage(ENDF *lib, const int weight, const int ng, double *energy,
       int j2 = j*2;
       if(lib->xdata[j2] >= e1){
         x1 = lib->xdata[j2-2];
-        y1 = lib->xdata[j2-1];
         j1 = j; break;
       }
     }
@@ -215,9 +230,76 @@ void DeceGroupAverage(ENDF *lib, const int weight, const int ng, double *energy,
       }
     }
 
-    /*** becase S is integral in [E0,E1], need to divide by the interval width */
+    /*** because S is integral in [E0,E1], need to divide by the interval width */
     sigma[i] = s / (e1 - e0);
   }
 }
 
+
+/**********************************************************/
+/*      Read External Group Structure Data                */
+/**********************************************************/
+int DecePrescanGroup(string grpfile)
+{
+  ifstream fp;
+  string line;
+
+  /*** pre-scan file */
+  fp.open(&grpfile[0]);
+  if(!fp){
+    message << "external group structure file " << grpfile << " cannot open";
+    TerminateCode("DeceReadGroup");
+  }
+
+  int ng = 0;
+  while( getline(fp,line) ) ng ++;
+  if(ng == 0){
+    message << "group structure in file " << grpfile << " empty";
+    TerminateCode("DecePrescanGroup");
+  }
+  fp.close();
+
+  return ng;
+}
+
+
+int DeceReadGroup(double *xdat, string grpfile)
+{
+  ifstream fp;
+  string line;
+  double x = 0.0;
+  int ng = 0;
+
+  fp.open(&grpfile[0]);
+  while(getline(fp,line)){
+    if(line[0] == '#') continue;
+    if(line.length() == 0) continue;
+
+    istringstream ss(line);
+    ss >> x;
+    if(x > 0.0) xdat[ng++] = x * opt.ReadXdataConversion;;
+  }
+  fp.close();
+
+
+  /*** just in case, check if data are in the ascending order */
+  x = xdat[0];
+  bool order = true;
+  for(int i=1 ; i<ng ; i++){
+    if(xdat[i] < x){
+      order = false;
+      break;
+    }
+    x = xdat[i];
+  }
+  if(!order){
+    message << "group energies are not in the ascending order";
+    TerminateCode("DeceReadGroup");
+  }
+
+  message << "group structure from file " << grpfile << " includes " << ng << " energy points from " << xdat[0] << " to " << xdat[ng-1];
+  Notice("DeceReadGroup");
+
+  return ng;
+}
 
